fixed some fields on YAML
